Fix: Post 페이지 수정
- 글쓴이와 채팅하기 버튼 추가

--- a/src/pages/PostDetail.scss
+++ b/src/pages/PostDetail.scss
@@ -10,4 +10,23 @@
             width: 500px;
         }
     }
+    .button-wrapper {
+        .ant-btn {
+            position: sticky;
+            top: 150px;
+
+            font-family: 'LeeSeoyun';
+            font-size: 17px;
+
+            background-color: #9BCAEF;
+            border-color: #9BCAEF;
+            margin-left: 30px;
+            color: black;
+            border-radius: .4em;
+        }
+        .ant-btn:hover {
+            background-color: #71bdf8;
+            border-color: #71bdf8;
+        }
+    }
 }
