Fix: 디자인 수정
- 채팅, Post, 오이페이, 로그인, 회원가입 디자인 수정
- Home 컨텐츠 추가

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -19,6 +19,14 @@
 
     li {
       text-decoration: none;
+      color: black;
+
+      input {
+        color: black;
+      }
+    }
+    li:hover {
+      color: #9BCAEF;
     }
   }
 }
