Fix: OiPay 사용내역 개선
- 사용금액에 콤마(,) 추가
- 아래 여백 추가

--- a/src/components/OiPayUsage.scss
+++ b/src/components/OiPayUsage.scss
@@ -1,7 +1,15 @@
 .oipay-history-section {
     font-family: 'Noto Sans KR', sans-serif;
+    padding-bottom: 100px;
 
     .ant-list {
         margin: 5px 50px;
+
+        .ant-list-item {
+            .amount-text {
+                width: 100px;
+                text-align: right;
+            }
+        }
     }
 }
