--- a/src/pages/PostDetail.scss
+++ b/src/pages/PostDetail.scss
@@ -35,12 +35,13 @@
             font-weight: bold;
         }
 
-        .post-price {
-            font-size: 17px;
+        .post-desc {
+            margin: 15px 5px 30px;
         }
 
-        .post-desc {
-            margin: 15px 5px;
+        .post-create_at {
+            font-size: 12px;
+            color: rgb(186, 183, 183);
         }
     }
 }
