Fix: 채팅 api 연결 외
- 채팅 api 연결
- 중고글 price, nickname 표시
- 로그인 안되어있는 경우 중고글에서 '채팅하기' 불가능하도록 막기
- 경매 api 주소 수정

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,4 +1,6 @@
 .Home {
+    padding-bottom: 50px;
+
     .ant-divider {
         .ant-divider-inner-text {
             font-family: 'LeeSeoyun';
@@ -12,6 +14,22 @@
             width: unset;
             justify-content: space-around;
             margin: 50px;
+        }
+    }
+    
+    .post-of-today-section {
+        .post-list-wrapper {
+            .post-list-section {
+                justify-content: center;
+            }
+        }
+    }
+
+    .auction-close-soon-section {
+        .auction-list-wrapper {
+            .auction-list-section {
+                justify-content: center;
+            }
         }
     }
 }
