--- a/src/pages/ChatRoomDetail.scss
+++ b/src/pages/ChatRoomDetail.scss
@@ -6,6 +6,7 @@
 
     .chat-content-section {
         width: 500px;
+        
 
         h2 {
             padding: 10px 5px;
@@ -14,8 +15,9 @@
         }
 
         .message-section {
-            min-height: 400px;
+            height: 500px;
             margin-bottom: 15px;
+            overflow-y: scroll;
         }
     }
 }
