--- a/src/pages/PostWrite.scss
+++ b/src/pages/PostWrite.scss
@@ -4,7 +4,14 @@
   margin: 0 auto;
 
   .ant-row {
+    display: flex;
     justify-content: center;
+  }
+
+  .ant-divider {
+    font-size: 30px;
+    font-family: "LeeSeoyun";
+    margin-bottom: 50px;
   }
 }
 
