design: 패딩 추가, 글 작성 버튼 스타일링

--- a/src/pages/PostListPage.scss
+++ b/src/pages/PostListPage.scss
@@ -1,19 +1,26 @@
+.post-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .post-list-page {
-  	display: flex;
-	justify-content: space-around;
-	margin: 0px 30px;
-	font-family: 'Noto Sans KR', sans-serif;
+  display: flex;
+  justify-content: space-around;
+  margin: 0px 30px;
+  font-family: "Noto Sans KR", sans-serif;
 
-	.post-list-wrapper {
-		display: flex;
-		justify-content: center;
-		width: 80%;
-	}
+  .post-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+  }
 
-	.category-section {
-		width: 100px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
+  .category-section {
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
