--- a/src/pages/PostWrite.scss
+++ b/src/pages/PostWrite.scss
@@ -2,6 +2,7 @@
   font-family: "Noto Sans KR", sans-serif;
   width: 50%;
   margin: 0 auto;
+  padding-bottom: 50px;
 
   .ant-row {
     display: flex;
