--- a/src/components/Category.scss
+++ b/src/components/Category.scss
@@ -1,18 +1,19 @@
 .category-section {
-	width: 100px;
-  	display: flex;
-	flex-direction: column;
-	align-items: center;
-	
-	.category-button {
-		display: flex;
-		justify-content: center;
-		align-items: center;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
 
-		height: 70px;
-		width: 70px;
-		background-color: #9BCAEF;
-		margin: 10px;
-		border-radius: 50%;
-	}
+  .category-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 70px;
+    width: 70px;
+    background-color: #9bcaef;
+    margin: 10px;
+    border-radius: 50%;
+  }
 }
