design: 글 목록 중앙 정렬

--- a/src/components/PostList.scss
+++ b/src/components/PostList.scss
@@ -1,10 +1,11 @@
 .post-list-section {
   display: flex;
   flex-wrap: wrap;
-	
-	a {
-		height: fit-content;
-	}
+  justify-content: center;
+
+  a {
+    height: fit-content;
+  }
 
   .post-item {
     margin: 5px;
