--- a/src/components/OiPayUsage.scss
+++ b/src/components/OiPayUsage.scss
@@ -1,15 +1,12 @@
 .oipay-history-section {
-    font-family: 'Noto Sans KR', sans-serif;
-    padding-bottom: 100px;
+  font-family: "Noto Sans KR", sans-serif;
+  padding-bottom: 100px;
 
-    .ant-list {
-        margin: 5px 50px;
-
-        .ant-list-item {
-            .amount-text {
-                width: 100px;
-                text-align: right;
-            }
-        }
+  .ant-list-item {
+    .amount-text {
+      width: 100px;
+      text-align: right;
+      margin-right: 30px;
     }
+  }
 }
