--- a/src/pages/AuctionListPage.scss
+++ b/src/pages/AuctionListPage.scss
@@ -7,5 +7,8 @@
     display: flex;
     justify-content: center;
     width: 80%;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
   }
 }
