--- a/src/pages/OiPayCharge.scss
+++ b/src/pages/OiPayCharge.scss
@@ -1,7 +1,24 @@
 .oipay-charge-section {
-    .ant-form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Noto Sans KR", sans-serif;
+  padding-bottom: 50px;
+
+  .ant-divider {
+    font-size: 30px;
+    font-family: "LeeSeoyun";
+    margin-bottom: 20px;
+  }
+
+  .ant-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .ant-typography {
+    font-size: 15px;
+    font-weight: bold;
+  }
 }
