--- a/src/pages/AuctionDetail.scss
+++ b/src/pages/AuctionDetail.scss
@@ -1,9 +1,21 @@
-.my-auction-edit-delete-button-section {
-    margin: 10px 0px;
-    .ant-btn {
-        margin-right: 8px;
+.auction-detail-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .my-auction-edit-delete-button-section {
+        margin: 10px 0px;
+        .ant-btn {
+            margin-right: 8px;
+        }
+    }
+    .auction-info-section {
+        max-width: 500px;
+    }
+
+    .bidding-list-section {
+        width: 600px;
+        margin: 20px;
     }
 }
-.auction-info-section {
-    max-width: 500px;
-}
+
