--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,6 +1,22 @@
 .Home {
     padding-bottom: 50px;
 
+    .banner-section {
+        .slick-list {
+            h3 {
+                overflow: hidden;
+                img {
+                    width: 100%;
+                    height: auto;
+                    object-fit: fill;
+                    // object-position: 50% 50%;
+                }
+            }
+        }
+    }
+
+    
+
     .ant-divider {
         .ant-divider-inner-text {
             font-family: 'LeeSeoyun';
