--- a/src/pages/AuctionListPage.scss
+++ b/src/pages/AuctionListPage.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-around;
   margin: 0px 30px;
+  padding-bottom: 50px;
 
   .auction-list-wrapper {
     display: flex;
