--- a/src/pages/PostListPage.scss
+++ b/src/pages/PostListPage.scss
@@ -8,6 +8,7 @@
   justify-content: space-around;
   margin: 0px 30px;
   font-family: "Noto Sans KR", sans-serif;
+  padding-bottom: 50px;
 
   .post-list-wrapper {
     display: flex;
