--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -7,9 +7,8 @@
                 overflow: hidden;
                 img {
                     width: 100%;
-                    height: auto;
-                    object-fit: fill;
-                    // object-position: 50% 50%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
         }
